refactor: 清理模块合并后的死代码与重复启动逻辑